screen overflow bug solve

--- a/src/Style/App.scss
+++ b/src/Style/App.scss
@@ -11,12 +11,12 @@
 .base{
 
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     @include flex;
     flex-direction: column;
     background: linear-gradient(to left bottom, $bgcolor,$bgcolor2);
     gap: 1.5rem;
-
+    overflow: auto;
     .inputbox{
 
         background-color: $boxcolor;
@@ -27,6 +27,7 @@
         gap: 20px;
         border-radius: 1rem;
         box-shadow: 5px 10px 1rem $black ;
+        margin: 1rem;
         
 
         >p{
@@ -53,7 +54,7 @@
         flex-direction: column;
         width: 66%;
         gap: 0.5rem;
-        
+        margin: 0.5rem;
         .eachtodo{
             width: 100%;
         }
